--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,18 +6,20 @@
 @import "./base/reset";
 @import "./base/container";
 
-// Components
-@import "./components/btn";
-@import "./components/logo";
-@import "./components/socials";
-@import "./components/modals";
+// // Components
+// @import "./components/btn";
+// @import "./components/logo";
+// @import "./components/socials";
+// @import "./components/modals";
 
-// Layouts
-@import "./layouts/header";
-@import "./layouts/hero";
-@import "./layouts/features";
-@import "./layouts/services";
-@import "./layouts/worker";
-@import "./layouts/clients";
-@import "./layouts/portfolio";
-@import "./layouts/footer";
+// // Layouts
+// @import "./layouts/header";
+// @import "./layouts/hero";
+// @import "./layouts/features";
+// @import "./layouts/services";
+// @import "./layouts/worker";
+// @import "./layouts/clients";
+// @import "./layouts/portfolio";
+// @import "./layouts/footer";
+
+@import "./layouts/team2";
