--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -2,19 +2,23 @@
    width: 100%;
    margin-left: auto;
    margin-right: auto;
-   padding-left: 15px;
-   padding-right: 15px;
+   padding-left: 20px;
+   padding-right: 20px;
 
-   // @media screen and (max-width: 767px) {
-   //    width: 480px;
-   // }
+   @media screen and (max-width: 767px) {
+      width: 320px;
+   }
 
    @media screen and (min-width: 768px) {
       width: 768px;
+      padding-left: 40px;
+      padding-right: 40px;
    }
 
-   @media screen and (min-width: 1200px) {
-      width: 1200px;
+   @media screen and (min-width: 1440px) {
+      width: 1440px;
+      padding-left: 26px;
+      padding-right: 26px;
    }
 }
 
