--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -5,9 +5,9 @@
    padding-left: 20px;
    padding-right: 20px;
 
-   @media screen and (max-width: 767px) {
-      width: 320px;
-   }
+   // @media screen and (max-width: 767px) {
+   //    width: 320px;
+   // }
 
    @media screen and (min-width: 768px) {
       width: 768px;
